# Lossless-Lab

./: PRD.md  README.md  STRATEGY.md  package-lock.json  package.json  vite.config.ts
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/audio/: decoder.rs  device_profiles.rs  engine.rs  equalizer.rs  mod.rs  null_test.rs  replaygain.rs  ring_buffer.rs
src-tauri/src/metadata/: reader.rs
src-tauri/src/playlist/: manager.rs
src/components/layout/: Sidebar.tsx  TitleBar.tsx
src/components/player/: PlaybackControls.tsx  VolumeControl.tsx
src/hooks/: useAudio.ts
src/lib/: tauri-commands.ts  types.ts  utils.ts
src/stores/: playerStore.ts  settingsStore.ts
