[package]
name = "masukii"
version = "0.1.0"
description = "マスキー - Bit-Perfect Music Player"
authors = ["you"]
edition = "2021"

[lib]
name = "masukii_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio
cpal = "0.15"
symphonia = { version = "0.5", features = ["all"] }
rubato = "0.15"

# Metadata
lofty = "0.21"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Concurrency
crossbeam-channel = "0.5"
parking_lot = "0.12"

# File watching
notify = "7"

# App data directory
dirs-next = "2"

# Utils
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
